<resources>
    <string name="app_name">IEEE MTTS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">settings</string>
    <string name="build_version_1_0">Build Version 1.0</string>
    <string name="previous_events">Previous Events</string>
    <string name="news">News</string>
    <string name="projects">Projects</string>
    <string name="communicate">Communicate</string>
    <string name="members">Members</string>
    <string name="contact_us">Contact Us</string>
    <string name="build_version_v1_0">Build Version v1.0</string>
</resources>
